# voicebox

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  BONANZA_IMPROVEMENTS.md  Brewfile  CHANGELOG.md  CONTRIBUTING.es.md  CONTRIBUTING.md  CURRENT_STATE.md  DOCKER_RUN.md  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.web  IMPROVEMENTS.md  Makefile  NewBr.txt  PATCH_NOTES.md  README.es.md  README.md  SECURITY.es.md  SECURITY.md  SERVERLESS.md  SRT2VOICE.md  VOICEBOX_DEV_GUIDE.md  biome.json  conformitycheck.md  debug.md  denoiser.md  docker-compose.backend.yml  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.web.yml  docker-compose.yml  docker-entrypoint.sh  docker-registry.yml  justfile  package.json  (+5 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  docker-registry.yml  pull_request_template.md  release.yml
app/: Dockerfile  index.html  package.json  tsconfig.json
backend/: .dockerignore  Dockerfile  NVIDIA.md  README.md  SETTINGS_API.md  app.py  build_binary.py  channels.py  cli.py  config.py  custom_models.py  database.py  docker-compose.yml  export_import.py  finetune.py  finetune_worker.py  history.py  main.py  models.py  profiles.py  pyi_rth_numpy_compat.py  pyi_rth_torch_compiler_disable.py  pyproject.toml  requirements-mlx.txt  requirements-win-setup.txt  requirements.txt  server.py  serverless_handler.py  settings.py  setup-linux.sh  stories.py  transcribe.py  (+3 more)
mcp/: Cargo.toml  Dockerfile
mcp/src/: client.rs  error.rs  main.rs  server.rs
mcp/tests/: integration.rs
(+468 files in other folders)
